tuning metrics - add favorite and skipping, organize, fix visible time, fix seeking behavior, logging, ensure exit logging for modal, pagehide, completion redirect, and redirect button. modal onConfirm

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -406,7 +406,7 @@ button:disabled i{
     opacity: 1;
 }
 
-.noUi-connects {
+.noUi-connect {
     background: var(--dark-green)!important;
 }
 
